continuing work on GUI, beginning work on Fusion object creation. using sketches and extrusions, not the primitive solids in Fusion

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "./Source/gui.py",
+            // "program": "./Source/gui.py",
+            "program": "${file}",
             "console": "integratedTerminal"
         }
     ]
