basic text to CAD working, takes text and just looks for the input arguments by input of numbers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,9 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "fusion_script_generator.py",
-            // "program": "${file}",
+            // "program": "test.py",
+            // "program": "fusion_script_generator.py",
+            "program": "${file}",
             "console": "integratedTerminal"
         }
     ]
