--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,15 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Attach",
+            "name": "Python: Current File",
             "type": "python",
-            "request": "attach",
-            "pathMappings": [  {
-                "localRoot": "${workspaceRoot}",
-                "remoteRoot": "${workspaceRoot}"}],
-            "osx": {"filePath":"${file}"},
-            "windows": {"filePath":"${file}"},
-            "port": 9000,
-            "host": "localhost"
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
         }
     ]
 }
