added a sample for speech recognition that waits for the user to finish speaking
Next, integrate this into the TextParser class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.pythonPath": "/opt/anaconda3/envs/env_ml/bin/python"
+	"python.pythonPath": "C:\\Users\\akash\\.conda\\envs\\env_ml\\python.exe"
 }
